--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "angular-mentions": "^1.1.3",
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-firebase": "2.0.5",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "4.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -63,7 +70,16 @@
   "cordova": {
     "plugins": {
       "cordova-sqlite-storage": {},
-      "cordova-plugin-firebase": {}
-    }
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "browser"
+    ]
   }
 }
