make groups and topics clickable, enhance routing UX

--- a/angular.json
+++ b/angular.json
@@ -49,8 +49,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "baseHref": "/yadavote",
-              "deployUrl": "/yadavote/",
+              "baseHref": "/appvote/",
+              "deployUrl": "/appvotestatic/",
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
