--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.19.1",
+    "@ionic-native/file-chooser": "^5.19.1",
+    "@ionic-native/file-picker": "^5.19.1",
+    "@ionic-native/file-transfer": "^5.19.1",
     "@ionic-native/firebase": "^5.18.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -28,6 +32,10 @@
     "angular-mentions": "^1.1.3",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.2",
+    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-filechooser": "1.2.0",
+    "cordova-plugin-filepicker": "1.1.6",
     "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
@@ -76,7 +84,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-filepicker": {},
+      "cordova-plugin-filechooser": {}
     },
     "platforms": [
       "browser"
