update for skynet support

--- a/angular.json
+++ b/angular.json
@@ -49,8 +49,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "baseHref": "/appvote/",
-              "deployUrl": "/appvotestatic/",
+              "baseHref": ".",
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
